phoenix.yaml
apiVersion: v1
kind: Service
metadata:
  name: phoenix
  labels:
    app: phoenix
spec:
  ports:
  - name: http
    port: 80
    targetPort: 4000
  selector:
    app: phoenix
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phoenix
  labels:
    app: phoenix
spec:
  selector:
    matchLabels:
      app:  phoenix
  replicas: 1
  template:
    metadata:
      labels:
        app: phoenix
    spec:
      containers:
      - name: phoenix
        image: pojiro/phoenix_deploy_image_test2
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
